<resources>
    <string name="app_name">ElearningTM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="delogare">Delogare</string>
    <string name="cursurile_mele">Cursurile mele:</string>
    <string name="rol_student_profesor">Rol: [Student/Profesor]</string>
    <string name="bine_ai_venit_nume_utilizator">Bine ai venit, [Nume Utilizator]!</string>
    <string name="adaug_o_tem_nou">Adaugă o Temă Nouă</string>
    <string name="titlul_temei">Titlul Temei</string>
    <string name="descriere_i_instruc_iuni">Descriere și instrucțiuni</string>
    <string name="punctaj_maxim">Punctaj Maxim</string>
    <string name="alege_deadline">Alege Deadline</string>
    <string name="data_limit_neselectat">Data limită: Neselectată</string>
    <string name="public_tema">Publică Tema</string>
    <string name="create_or_delete_courses">Create or delete courses</string>
    <string name="course_management">Course Management</string>
    <string-array name="material_types">
        <item>LECTIE</item>
        <item>LABORATOR</item>
        <item>ANUNT</item>
        <item>RESURSA</item>
    </string-array>
    <string-array name="user_roles">
        <item>STUDENT</item>
        <item>PROFESOR</item>
        <item>ADMIN</item>
    </string-array>
</resources>